--- a/public/index.html
+++ b/public/index.html
@@ -4,40 +4,69 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="theme-color" content="#0f5132" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Title -->
+    <title>Treatments – Agasthiyas Kathir Health Care Centre</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Agasthiyas Kathir Health Care Centre offers holistic treatments including Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, and Detoxing in Coimbatore.">
+    <meta name="keywords" content="Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, Detoxing, Migraine Relief, Pain Management, Yoga, Zumba, Meditation, Coimbatore">
+    <meta name="author" content="Agasthiyas Kathir Health Care Centre">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness" />
+    <meta property="og:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more. Located in Coimbatore." />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta property="og:url" content="http://agasthiyaskathirhealthcare.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness" />
+    <meta name="twitter:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
+
+    <!-- Google Schema Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MedicalClinic",
+      "name": "Agasthiyas Kathir Health Care Centre",
+      "image": "http://agasthiyaskathirhealthcare.com/logo192.png",
+      "@id": "",
+      "url": "http://agasthiyaskathirhealthcare.com",
+      "telephone": "+91 99430 69678",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "No 36, Subramaniyam Palayam Road, Bharathi Nagar 1st Street, Subramaniyam Palayam",
+        "addressLocality": "Coimbatore",
+        "postalCode": "641029",
+        "addressCountry": "IN"
+      },
+      "priceRange": "₹₹",
+      "sameAs": [
+        "https://www.facebook.com/",
+        "https://www.instagram.com/",
+        "https://wa.me/919943069678"
+      ],
+      "medicalSpecialty": [
+        "Acupuncture",
+        "Chiropractic",
+        "Panchakarma",
+        "Varma Therapy",
+        "Cupping Therapy",
+        "Detoxing"
+      ]
+    }
+    </script>
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
