--- a/public/index.html
+++ b/public/index.html
@@ -1,101 +1,71 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-
-    <!-- Viewport for Responsive Design -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=5"
-    />
-    <meta name="theme-color" content="#0f5132" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#0a3622" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#0f5132" />
 
     <!-- Title -->
     <title>Treatments – Agasthiyas Kathir Health Care Centre</title>
 
     <!-- SEO Meta Tags -->
-    <meta
-      name="description"
-      content="Agasthiyas Kathir Health Care Centre offers holistic treatments including Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, and Detoxing in Coimbatore."
-    />
-    <meta
-      name="keywords"
-      content="Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, Detoxing, Migraine Relief, Pain Management, Yoga, Zumba, Meditation, Coimbatore"
-    />
-    <meta name="author" content="Agasthiyas Kathir Health Care Centre" />
+    <meta name="description" content="Agasthiyas Kathir Health Care Centre offers holistic treatments including Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, and Detoxing in Coimbatore.">
+    <meta name="keywords" content="Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, Detoxing, Migraine Relief, Pain Management, Yoga, Zumba, Meditation, Coimbatore">
+    <meta name="author" content="Agasthiyas Kathir Health Care Centre">
 
     <!-- Open Graph / Facebook -->
-    <meta
-      property="og:title"
-      content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness"
-    />
-    <meta
-      property="og:description"
-      content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more. Located in Coimbatore."
-    />
+    <meta property="og:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness" />
+    <meta property="og:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more. Located in Coimbatore." />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="http://agasthiyaskathirhealthcare.com" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness"
-    />
-    <meta
-      name="twitter:description"
-      content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more."
-    />
+    <meta name="twitter:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness" />
+    <meta name="twitter:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more." />
     <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
 
     <!-- Google Schema Markup -->
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "MedicalClinic",
-        "name": "Agasthiyas Kathir Health Care Centre",
-        "image": "http://agasthiyaskathirhealthcare.com/logo192.png",
-        "@id": "",
-        "url": "http://agasthiyaskathirhealthcare.com",
-        "telephone": "+91 99430 69678",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "No 36, Subramaniyam Palayam Road, Bharathi Nagar 1st Street, Subramaniyam Palayam",
-          "addressLocality": "Coimbatore",
-          "postalCode": "641029",
-          "addressCountry": "IN"
-        },
-        "priceRange": "₹₹",
-        "sameAs": [
-          "https://www.facebook.com/",
-          "https://www.instagram.com/",
-          "https://wa.me/919943069678"
-        ],
-        "medicalSpecialty": [
-          "Acupuncture",
-          "Chiropractic",
-          "Panchakarma",
-          "Varma Therapy",
-          "Cupping Therapy",
-          "Detoxing"
-        ]
-      }
+    {
+      "@context": "https://schema.org",
+      "@type": "MedicalClinic",
+      "name": "Agasthiyas Kathir Health Care Centre",
+      "image": "http://agasthiyaskathirhealthcare.com/logo192.png",
+      "@id": "",
+      "url": "http://agasthiyaskathirhealthcare.com",
+      "telephone": "+91 99430 69678",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "No 36, Subramaniyam Palayam Road, Bharathi Nagar 1st Street, Subramaniyam Palayam",
+        "addressLocality": "Coimbatore",
+        "postalCode": "641029",
+        "addressCountry": "IN"
+      },
+      "priceRange": "₹₹",
+      "sameAs": [
+        "https://www.facebook.com/",
+        "https://www.instagram.com/",
+        "https://wa.me/919943069678"
+      ],
+      "medicalSpecialty": [
+        "Acupuncture",
+        "Chiropractic",
+        "Panchakarma",
+        "Varma Therapy",
+        "Cupping Therapy",
+        "Detoxing"
+      ]
+    }
     </script>
 
-    <!-- PWA / Manifest -->
+    <!-- Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
-    <!-- Preconnect (if using Google Fonts or CDN assets) -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
   </head>
-  <body class="bg-white text-gray-800 antialiased">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
