--- a/public/index.html
+++ b/public/index.html
@@ -7,25 +7,26 @@
     <meta name="theme-color" content="#0f5132" />
 
     <!-- Title -->
-    <title>Treatments – Agasthiyas Kathir Health Care Centre</title>
+    <title>Agasthiyas Kathir Health Care Centre | Acupuncture, Varma, Panchakarma in Coimbatore</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Agasthiyas Kathir Health Care Centre offers holistic treatments including Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, and Detoxing in Coimbatore.">
-    <meta name="keywords" content="Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, Detoxing, Migraine Relief, Pain Management, Yoga, Zumba, Meditation, Coimbatore">
+    <meta name="description" content="Holistic healing at Agasthiyas Kathir Health Care Centre, Coimbatore. We offer Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, Detoxing, Yoga, and Meditation. Call us today for natural wellness solutions!">
+    <meta name="keywords" content="Best Acupuncture in Coimbatore, Top Acupuncture Clinic Coimbatore, Best Varma Therapy in Coimbatore, Top Varma Therapy Clinic Coimbatore, Best Panchakarma Treatment Coimbatore, Top Panchakarma Centre Coimbatore, Best Chiropractic Care Coimbatore, Top Chiropractor Coimbatore, Best Cupping Therapy in Coimbatore, Top Cupping Therapy Centre Coimbatore, Best Detoxing Treatment Coimbatore, Top Detox Centre Coimbatore, Best Pain Relief Therapy Coimbatore, Top Pain Management Centre Coimbatore, Best Migraine Treatment Coimbatore, Top Migraine Relief Clinic Coimbatore, Best Back Pain Treatment Coimbatore, Top Spine Care Centre Coimbatore, Best Sciatica Pain Relief Coimbatore, Best Stress Relief Therapy Coimbatore, Best Yoga Classes in Coimbatore, Top Yoga Centre Coimbatore, Best Meditation Centre Coimbatore, Top Zumba Fitness Classes Coimbatore, Best Holistic Healing Coimbatore, Top Wellness Centre Coimbatore, Best Ayurvedic Treatments in Coimbatore, Top Alternative Medicine Coimbatore, Best Weight Loss Therapy Coimbatore, Top Natural Health Care Coimbatore">
+
     <meta name="author" content="Agasthiyas Kathir Health Care Centre">
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness" />
-    <meta property="og:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more. Located in Coimbatore." />
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
-    <meta property="og:url" content="http://agasthiyaskathirhealthcare.com" />
+    <meta property="og:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness in Coimbatore" />
+    <meta property="og:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more in Coimbatore." />
+    <meta property="og:image" content="https://www.agasthiyaskathirhealthcare.com/og-image.jpg" />
+    <meta property="og:url" content="https://www.agasthiyaskathirhealthcare.com/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness" />
-    <meta name="twitter:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta name="twitter:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness in Coimbatore" />
+    <meta name="twitter:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more in Coimbatore." />
+    <meta name="twitter:image" content="https://www.agasthiyaskathirhealthcare.com/og-image.jpg" />
 
     <!-- Google Schema Markup -->
     <script type="application/ld+json">
@@ -33,9 +34,8 @@
       "@context": "https://schema.org",
       "@type": "MedicalClinic",
       "name": "Agasthiyas Kathir Health Care Centre",
-      "image": "http://agasthiyaskathirhealthcare.com/logo192.png",
-      "@id": "",
-      "url": "http://agasthiyaskathirhealthcare.com",
+      "image": "https://www.agasthiyaskathirhealthcare.com/logo192.png",
+      "url": "https://www.agasthiyaskathirhealthcare.com",
       "telephone": "+91 99430 69678",
       "address": {
         "@type": "PostalAddress",
@@ -44,6 +44,12 @@
         "postalCode": "641029",
         "addressCountry": "IN"
       },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "11.0436",
+        "longitude": "76.9545"
+      },
+      "openingHours": "Mo-Su 08:00-20:00",
       "priceRange": "₹₹",
       "sameAs": [
         "https://www.facebook.com/",
