--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,50 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0f5132" />
+    <meta name="theme-color" content="#0f5132"/>
 
     <!-- Title -->
     <title>Agasthiyas Kathir Health Care Centre | Acupuncture, Varma, Panchakarma in Coimbatore</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Holistic healing at Agasthiyas Kathir Health Care Centre, Coimbatore. We offer Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, Detoxing, Yoga, and Meditation. Call us today for natural wellness solutions!">
-    <meta name="keywords" content="Best Acupuncture in Coimbatore, Top Acupuncture Clinic Coimbatore, Best Varma Therapy in Coimbatore, Top Varma Therapy Clinic Coimbatore, Best Panchakarma Treatment Coimbatore, Top Panchakarma Centre Coimbatore, Best Chiropractic Care Coimbatore, Top Chiropractor Coimbatore, Best Cupping Therapy in Coimbatore, Top Cupping Therapy Centre Coimbatore, Best Detoxing Treatment Coimbatore, Top Detox Centre Coimbatore, Best Pain Relief Therapy Coimbatore, Top Pain Management Centre Coimbatore, Best Migraine Treatment Coimbatore, Top Migraine Relief Clinic Coimbatore, Best Back Pain Treatment Coimbatore, Top Spine Care Centre Coimbatore, Best Sciatica Pain Relief Coimbatore, Best Stress Relief Therapy Coimbatore, Best Yoga Classes in Coimbatore, Top Yoga Centre Coimbatore, Best Meditation Centre Coimbatore, Top Zumba Fitness Classes Coimbatore, Best Holistic Healing Coimbatore, Top Wellness Centre Coimbatore, Best Ayurvedic Treatments in Coimbatore, Top Alternative Medicine Coimbatore, Best Weight Loss Therapy Coimbatore, Top Natural Health Care Coimbatore">
+    <meta name="description" content="Holistic healing at Agasthiyas Kathir Health Care Centre, Coimbatore. We offer Acupuncture, Varma Therapy, Panchakarma, Chiropractic, Cupping, Detoxing, Yoga, Meditation, Zumba, and No Tablet Natural Cures. Experience medicine-free holistic wellness today!">
+
+    <meta name="keywords" content="
+    Best Acupuncture in Coimbatore, Top Acupuncture Clinic Coimbatore, 
+    Best Varma Therapy in Coimbatore, Top Varma Therapy Clinic Coimbatore, 
+    Best Panchakarma Treatment Coimbatore, Top Panchakarma Centre Coimbatore, 
+    Best Chiropractic Care Coimbatore, Top Chiropractor Coimbatore, 
+    Best Cupping Therapy in Coimbatore, Top Cupping Therapy Centre Coimbatore, 
+    Best Detoxing Treatment Coimbatore, Top Detox Centre Coimbatore, 
+    Best Pain Relief Therapy Coimbatore, Top Pain Management Centre Coimbatore, 
+    Best Migraine Treatment Coimbatore, Top Migraine Relief Clinic Coimbatore, 
+    Best Back Pain Treatment Coimbatore, Top Spine Care Centre Coimbatore,
+    Best Sciatica Pain Relief Coimbatore, Best Stress Relief Therapy Coimbatore, 
+    Best Yoga Classes in Coimbatore, Top Yoga Centre Coimbatore, 
+    Best Meditation Centre Coimbatore, Top Zumba Fitness Classes Coimbatore,
+    Best Holistic Healing Coimbatore, Top Wellness Centre Coimbatore, 
+    Best Ayurvedic Treatments in Coimbatore, Top Alternative Medicine Coimbatore, 
+    Best Weight Loss Therapy Coimbatore, Top Natural Health Care Coimbatore,
+    No Tablet Cure in Coimbatore, Best Medicine Free Treatments Coimbatore, 
+    Natural Healing without Medicines Coimbatore, Top Holistic No Tablet Therapy, 
+    Best Natural Pain Relief Without Medicines, No Tablet Cure for Migraine, 
+    No Tablet Cure for Back Pain, No Tablet Cure for Stress Relief, 
+    Natural Ways of Healing in Coimbatore, Best Non-Medicinal Treatments Coimbatore
+    ">
 
     <meta name="author" content="Agasthiyas Kathir Health Care Centre">
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness in Coimbatore" />
-    <meta property="og:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more in Coimbatore." />
+    <meta property="og:title" content="Agasthiyas Kathir Health Care Centre – Natural Healing & Wellness in Coimbatore" />
+    <meta property="og:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and No Tablet Natural Cures in Coimbatore." />
     <meta property="og:image" content="https://www.agasthiyaskathirhealthcare.com/og-image.jpg" />
     <meta property="og:url" content="https://www.agasthiyaskathirhealthcare.com/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Agasthiyas Kathir Health Care Centre – Treatments & Wellness in Coimbatore" />
-    <meta name="twitter:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and more in Coimbatore." />
+    <meta name="twitter:title" content="Agasthiyas Kathir Health Care Centre – Natural Healing & Wellness in Coimbatore" />
+    <meta name="twitter:description" content="Holistic healing through Acupuncture, Panchakarma, Chiropractic, Yoga, Meditation, and No Tablet Natural Cures in Coimbatore." />
     <meta name="twitter:image" content="https://www.agasthiyaskathirhealthcare.com/og-image.jpg" />
 
     <!-- Google Schema Markup -->
@@ -62,9 +84,19 @@
         "Panchakarma",
         "Varma Therapy",
         "Cupping Therapy",
-        "Detoxing"
+        "Detoxing",
+        "No Tablet Natural Cures"
       ]
     }
+    </script>
+
+    <!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1L98JTLYWV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-1L98JTLYWV');
     </script>
 
     <!-- Manifest -->
